[gd_scene load_steps=14 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Content/Entities/Util/DashTarget.tscn" type="PackedScene" id=2]
[ext_resource path="res://Content/Entities/Util/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Content/Entities/Util/DamageHitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Content/Entities/Enemies/Buzz/Buzz.gd" type="Script" id=5]
[ext_resource path="res://Content/Entities/Util/StateMachine/StateMachine.gd" type="Script" id=6]
[ext_resource path="res://Content/Entities/Enemies/Buzz/TransitConditions.gd" type="Script" id=7]
[ext_resource path="res://Content/Entities/Enemies/Buzz/RootState.gd" type="Script" id=8]
[ext_resource path="res://Content/Entities/Enemies/Buzz/Flying.gd" type="Script" id=9]
[ext_resource path="res://Content/Entities/Enemies/Buzz/Boinked.gd" type="Script" id=10]
[ext_resource path="res://Content/Entities/Enemies/Buzz/Stunned.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[node name="Buzz" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 33
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -9.53674e-07, 0 )
scale = Vector2( 0.3125, 0.34375 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DashTarget" parent="." instance=ExtResource( 2 )]

[node name="DamageHitbox" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageHitbox"]
shape = SubResource( 2 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 6 )

[node name="RootState" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Flying" type="Node" parent="StateMachine/RootState"]
script = ExtResource( 9 )

[node name="Boinked" type="Node" parent="StateMachine/RootState"]
script = ExtResource( 10 )

[node name="Stunned" type="Node" parent="StateMachine/RootState"]
script = ExtResource( 11 )

[node name="TransitConditions" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="TurnTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="StunTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true
